finishd my first ever website

--- a/index.html
+++ b/index.html
@@ -8,18 +8,48 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1>Wellcome To</h1>
-            <h1><span class="name-highlight">Banna</span> website</h1>
+            <h1><span class="orange-highlight">Banna</span> website</h1>
             <h3>Professional web developer</h3>
-            <p>I'm Banna, a Web Developer from the Bangladesh. I’ve been developing for over a few months.I have divers set of skills,ranging from desiging,to HTML+CSS+Javascript etc..
-            I enjoy building everything from buisness sites to rich intarective web apps.
-        </p>
+            <p>
+                I'm Banna, a Web Developer from the Bangladesh. I’ve been developing for over a few months.I have divers set of skills,ranging from desiging,to HTML+CSS+Javascript etc..
+                Still I'm learning and mastering web development.I will not stop untill i become web development hero.
+            </p>
+            <a class="link-button" target="_blank" href="https://bangla.programming-hero.com/members/hasan-al-banna/">HIRE ME</a>
         </div>
         <div class="half-width">
             <img src="images/pic 1.png" alt="">
         </div>
     </section>
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="images/buttom.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Big Dream</h2>
+            <h3>Become World's No. 1 Developer</h3>
+            <p>I already learned the basic HTML and CSS.I can build any simple website.My goal is to learn advanced topics and become a best developer.</p>
+            <a class="link-button" target="_blank" href="https://www.facebook.com/hasan.banna.56">Go to my Facebook</a>
+        </div>
+
+    </section>
+    <section class="experience-area">
+        <h2>Experiences</h2>
+        <div id="full-stake" class="half-width single-experience">
+            <h2>Full Stake Web Developer</h2>
+            <h3 class="orange-highlight">2021 - present | Pro level Web Developer</h3>
+            <p>i am the master of HTML, CSS, and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I wen beyond with most populer Javascript framework called Vue JS.I even know development, server and security. I will give you 100% web solution.</p>
+        </div>
+        <div id="baby-web" class="half-width single-experience">
+            <h2>Baby Web Developer</h2>
+            <h3 class="orange-highlight">2020-2021 | programming-hero learner</h3>
+            <p>The didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them.The liked it. And uploaded the content. It was fun working at programming </p>
+        </div>
+    </section>
+    <footer>
+        <p>Copyright © Hasan Al Banna 2020, All Rights Reserved.</p>
+    </footer>
 </body>
 </html>
